--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -2,27 +2,97 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Schedule - TechCon 2024</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header>
-    <h1>Conference Schedule</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="register.html">Register</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
+    <div class="container">
+      <h1>Schedule for TechCon 2024</h1>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="register.html">Register</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <main>
-    <p>Stay tuned for the full TechCon 2024 schedule!</p>
+    <div class="container">
+      <div class="schedule-container">
+        <table>
+          <caption>Detailed Schedule of Events for TechCon 2024</caption>
+          <thead>
+            <tr>
+              <th scope="col">Time</th>
+              <th scope="col">Session</th>
+              <th scope="col">Speaker</th>
+              <th scope="col">Location</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">9:00 AM</th>
+              <td>Opening Keynote: The Future of AI</td>
+              <td>Dr. Sarah Chen</td>
+              <td>Main Hall</td>
+            </tr>
+            <tr>
+              <th scope="row">10:30 AM</th>
+              <td>Web3 and the Decentralized Future</td>
+              <td>James Rodriguez</td>
+              <td>Room A</td>
+            </tr>
+            <tr>
+              <th scope="row">11:45 AM</th>
+              <td>Cybersecurity in the Age of Quantum Computing</td>
+              <td>Maya Patel</td>
+              <td>Room B</td>
+            </tr>
+            <tr>
+              <th scope="row">1:00 PM</th>
+              <td>Lunch Break & Networking</td>
+              <td>-</td>
+              <td>Dining Hall</td>
+            </tr>
+            <tr>
+              <th scope="row">2:00 PM</th>
+              <td>Machine Learning Workshop</td>
+              <td>Dr. Michael Wong</td>
+              <td>Lab 1</td>
+            </tr>
+            <tr>
+              <th scope="row">3:30 PM</th>
+              <td>Green Tech Innovation</td>
+              <td>Emma Garcia</td>
+              <td>Room C</td>
+            </tr>
+            <tr>
+              <th scope="row">4:45 PM</th>
+              <td>The Evolution of Cloud Computing</td>
+              <td>Alex Thompson</td>
+              <td>Room A</td>
+            </tr>
+            <tr>
+              <th scope="row">6:00 PM</th>
+              <td>Closing Remarks & Networking Reception</td>
+              <td>Conference Team</td>
+              <td>Main Hall</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
   </main>
 
   <footer>
-    <p>&copy; 2025 TechCon Conference</p>
+    <div class="container">
+      <p>Copyright © 2025 TechCon Conference. All rights reserved.</p>
+    </div>
   </footer>
 </body>
 </html>
