--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -2,27 +2,88 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Contact - TechCon 2024</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact Us - TechCon 2024</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header>
-    <h1>Contact Us</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="schedule.html">Schedule</a></li>
-        <li><a href="register.html">Register</a></li>
-      </ul>
-    </nav>
+    <div class="container">
+      <h1>Contact Us</h1>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="schedule.html">Schedule</a></li>
+          <li><a href="register.html">Register</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <main>
-    <p>For inquiries, email us at: <a href="mailto:info@techcon2024.com">info@techcon2024.com</a></p>
+    <div class="container">
+      <section class="contact-info">
+        <h2>Get in Touch</h2>
+        <p>Have questions? We'd love to hear from you!</p>
+        
+        <div class="contact-details">
+          <div class="email">
+            <h3>Email Us</h3>
+            <p><a href="mailto:email@example.com">email@example.com</a></p>
+          </div>
+          
+          <div class="social-media">
+            <h3>Follow Us</h3>
+            <div class="social-links">
+              <a href="https://twitter.com/techcon" target="_blank">Twitter</a>
+              <a href="https://linkedin.com/company/techcon" target="_blank">LinkedIn</a>
+              <a href="https://facebook.com/techcon" target="_blank">Facebook</a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="contact-form">
+        <h2>Send us a Message</h2>
+        <form action="#" method="POST">
+          <div class="form-group">
+            <label for="contactName">Name:</label>
+            <input type="text" id="contactName" name="name" required>
+          </div>
+
+          <div class="form-group">
+            <label for="contactEmail">Email:</label>
+            <input type="email" id="contactEmail" name="email" required>
+          </div>
+
+          <div class="form-group">
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" rows="5" required></textarea>
+          </div>
+
+          <button type="submit">Send Message</button>
+        </form>
+      </section>
+
+      <section class="map-container">
+        <h2>Conference Venue</h2>
+        <iframe 
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1234!2d-122.4194!3d37.7749!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zM3DCsDQ2JzI5LjYiTiAxMjLCsDI1JzA5LjgiVw!5e0!3m2!1sen!2sus!4v1234567890"
+          width="100%" 
+          height="450" 
+          style="border:0;" 
+          allowfullscreen="" 
+          loading="lazy">
+        </iframe>
+      </section>
+    </div>
   </main>
 
   <footer>
-    <p>&copy; 2025 TechCon Conference</p>
+    <div class="container">
+      <p>Copyright © 2025 TechCon Conference. All rights reserved.</p>
+    </div>
   </footer>
 </body>
 </html>
