Refactor About and Schedule pages for improved semantic structure and consistency

--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -23,49 +23,52 @@
 
   <main>
     <div class="container">
-    <article class="history">
-      <h2>Our History</h2>
-      <img src="images/techcon-2020.jpg" alt="First TechCon conference in 2020" class="history-image">
-      <p>Founded in 2020, TechCon emerged as a response to the growing need for a collaborative platform in the tech industry. What started as a small gathering of 100 tech enthusiasts has grown into one of the most anticipated tech conferences globally, attracting over 5000 participants annually.</p>
-      <p>Through the years, we've witnessed the birth of numerous groundbreaking ideas, fostered invaluable connections, and celebrated technological innovations that have shaped our digital landscape.</p>
-    </article>
+      <article>
+        <section class="history">
+          <h2>Our History</h2>
+          <img src="images/techcon-2020.jpg" alt="First TechCon conference in 2020" class="history-image">
+          <p>Founded in 2020, TechCon emerged as a response to the growing need for a collaborative platform in the tech industry. What started as a small gathering of 100 tech enthusiasts has grown into one of the most anticipated tech conferences globally, attracting over 5000 participants annually.</p>
+          <p>Through the years, we've witnessed the birth of numerous groundbreaking ideas, fostered invaluable connections, and celebrated technological innovations that have shaped our digital landscape.</p>
+        </section>
 
-    <article class="mission">
-      <h2>Our Mission</h2>
-      <img src="images/mission-icon.png" alt="TechCon mission representation - connecting minds" class="mission-icon">
-      <p>At TechCon, our mission is to bridge the gap between innovation and implementation. We strive to:</p>
-      <ul>
-        <li>Foster collaboration between industry leaders and emerging talents</li>
-        <li>Showcase cutting-edge technologies and their practical applications</li>
-        <li>Provide a platform for networking and knowledge exchange</li>
-        <li>Inspire the next generation of tech innovators</li>
-      </ul>
-    </article>
+        <section class="mission">
+          <h2>Our Mission</h2>
+          <img src="images/mission-icon.png" alt="TechCon mission representation - connecting minds" class="mission-icon">
+          <p>At TechCon, our mission is to bridge the gap between innovation and implementation. We strive to:</p>
+          <ul>
+            <li>Foster collaboration between industry leaders and emerging talents</li>
+            <li>Showcase cutting-edge technologies and their practical applications</li>
+            <li>Provide a platform for networking and knowledge exchange</li>
+            <li>Inspire the next generation of tech innovators</li>
+          </ul>
+        </section>
 
-    <article class="past-speakers">
-      <h2>Notable Past Speakers</h2>
-      <div class="speaker">
-        <img src="images/speaker-sarah-chen.jpg" alt="Dr. Sarah Chen - AI Research Pioneer" class="speaker-photo">
-        <h3>Dr. Sarah Chen</h3>
-        <p>Leading AI researcher and founder of AI Ethics Institute, Dr. Chen's 2023 keynote on 'Responsible AI Development' set new industry standards for ethical AI implementation.</p>
-      </div>
-      <div class="speaker">
-        <img src="images/speaker-james-rodriguez.jpg" alt="James Rodriguez - Tech Entrepreneur" class="speaker-photo">
-        <h3>James Rodriguez</h3>
-        <p>Serial tech entrepreneur and sustainability advocate, James shared insights on 'Green Tech Revolution' in 2022, inspiring a wave of eco-friendly startups.</p>
-      </div>
-      <div class="speaker">
-        <img src="images/speaker-maya-patel.jpg" alt="Maya Patel - Cybersecurity Expert" class="speaker-photo">
-        <h3>Maya Patel</h3>
-        <p>Renowned cybersecurity expert Maya Patel's 2021 session on 'Future of Digital Security' helped organizations rethink their security protocols.</p>
-      </div>
-    </article>
+        <section class="past-speakers">
+          <h2>Notable Past Speakers</h2>
+          <div class="speaker">
+            <img src="images/speaker-sarah-chen.jpg" alt="Dr. Sarah Chen - AI Research Pioneer" class="speaker-photo">
+            <h3>Dr. Sarah Chen</h3>
+            <p>Leading AI researcher and founder of AI Ethics Institute, Dr. Chen's 2023 keynote on 'Responsible AI Development' set new industry standards for ethical AI implementation.</p>
+          </div>
+          <div class="speaker">
+            <img src="images/speaker-james-rodriguez.jpg" alt="James Rodriguez - Tech Entrepreneur" class="speaker-photo">
+            <h3>James Rodriguez</h3>
+            <p>Serial tech entrepreneur and sustainability advocate, James shared insights on 'Green Tech Revolution' in 2022, inspiring a wave of eco-friendly startups.</p>
+          </div>
+          <div class="speaker">
+            <img src="images/speaker-maya-patel.jpg" alt="Maya Patel - Cybersecurity Expert" class="speaker-photo">
+            <h3>Maya Patel</h3>
+            <p>Renowned cybersecurity expert Maya Patel's 2021 session on 'Future of Digital Security' helped organizations rethink their security protocols.</p>
+          </div>
+        </section>
+      </article>
     </div>
   </main>
 
   <footer>
     <div class="container">
-    <p>&copy; 2025 TechCon Conference</p>
+      <p>&copy; 2025 TechCon Conference</p>
+    </div>
   </footer>
 </body>
 </html>
