--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -91,7 +91,7 @@
 
   <footer>
     <div class="container">
-      <p>Copyright © 2025 TechCon Conference. All rights reserved.</p>
+      <p>copyright © 2025 TechCon Conference. All rights reserved.</p>
     </div>
   </footer>
 </body>
