--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -65,7 +65,7 @@
 
   <footer>
     <div class="container">
-      <p>&copy; 2025 TechCon Conference</p>
+      <p>Copyright © 2025 TechCon Conference. All rights reserved.</p>
     </div>
   </footer>
 </body>
